test/classes/dinan/circular_init_broken2.good
circular_init_broken2.chpl:2: error: statement references variable 'b' before it is defined
